<resources>
    <string name="app_name">Designs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="create_a_account">Create a account or Sign in to begin</string>
    <string name="text_size">24dp</string>
    <string name="welcome">Welcome!</string>
    <string name="email_address">Email_address</string>
    <string name="sign_in_with_email">Sign in With Email</string>
    <string name="hint">Password</string>
    <string name="hint2">Email Address</string>
    <string name="hint3">First Name</string>
    <string name="hint4">Last Name</string>
    <string name="hint5">Phone Number</string>
    <string name="hint6">Email</string>
    <string name="hint7">Occupation</string>
    <string name="hint8">Company Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="set_up_sign">Set up Signature</string>
    <string name="upload_sign">Upload Signature</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create a account</string>
    <string name="notifications">Notifications</string>
    <string name="leave_job">Leave Job</string>
    <string name="delete_job">Delete Job</string>
    <string name="time_zone">Time Zone</string>
    <string name="account_info">Account Info</string>
    <string name="text_cardview">2.3 MB,.docx</string>
    <string name="document1">Document1</string>
    <string name="settings">Settings</string>
    <string name="paused">Paused</string>
    <string name="in_progress">In Progress</string>
    <string name="completed">Completed</string>
    <string name="search_projects">Search Projects</string>
    <string name="hi_john">Hi,John</string>


</resources>