<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainDesign">
    <include layout="@layout/toolbar_main"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_24"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="310dp"
        tools:layout_editor_absoluteY="563dp" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="@dimen/width"
        android:layout_height="@dimen/height"
        android:padding="6dp"
        android:src="@drawable/person_img"
        android:background="@drawable/bg_circkle"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="55dp" />

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/hi_john"
        android:textColor="@color/black"
        android:textSize="@dimen/text_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toEndOf="@+id/circleImageView"
        tools:layout_editor_absoluteY="55dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/mailId_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="johndoe@abc.com"
        android:textSize="@dimen/margin_start_left_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toEndOf="@+id/circleImageView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="81dp" />

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/search_users_margin"
        android:background="@drawable/search_bg"
        android:src="@drawable/ic_baseline_search_24"
        android:ems="10"
        android:autofillHints="@string/hint3"
        android:hint="@string/search_projects"
        android:inputType="text"
        android:padding="@dimen/text_main"
        android:text="@string/search_projects"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView"
        android:drawableLeft="@drawable/ic_baseline_search_24"
        android:drawableStart="@drawable/ic_baseline_search_24" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/search_users_margin"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintStart_toStartOf="@+id/include"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        app:tabGravity="fill"
        app:tabMode="fixed" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-66dp"
        tools:layout_editor_absoluteY="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>